os scrollbar fixes 1

--- a/style.css
+++ b/style.css
@@ -51,6 +51,12 @@ html.is-animating.is-rendering .transition-y {
 }
 
 /*- OverlaySCROLLBARS -*/
+@keyframes os-opacity-in {
+    0% { opacity: 0; }
+    75% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
 .os-scrollbar {
     transform: scaleY(1.01) translateX(1px);
     padding: 0 !important;
@@ -59,8 +65,11 @@ html.is-animating.is-rendering .transition-y {
     transition: opacity 0.9s cubic-bezier(0.2, 0.85, 0, 1),
                 transform 0.4s cubic-bezier(0.4, 0.6, 0, 1),
                 visibility 0.7s, top 0.3s, right 0.3s, bottom 0.3s, left 0.3s !important;
+    animation: os-opacity-in 0.8s ease;
 }
-.os-scrollbar.os-scrollbar-auto-hidden {
+.os-scrollbar.os-scrollbar-auto-hidden,
+html.is-changing .os-scrollbar {
+    opacity: 0;
     transform: scaleY(1.01) translateX(100%);
     transition: opacity 0.4s 0.15s cubic-bezier(0.6, 0.6, 0, 1),
                 transform 0.6s 75ms cubic-bezier(0.4, 0.25, 0, 1),
@@ -85,6 +94,7 @@ html.is-animating.is-rendering .transition-y {
 .os-scrollbar-handle.active {
     background-color: rgb(200, 200, 200) !important;
 }
+
 
 /*--/ NAV /--*/
 nav {
